<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/wehi_container"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
        android:textColor="@color/weather_small_title"
        android:text="@string/waiting_data"/>

    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
        android:textColor="@color/weather_small_title"
        android:text="@string/waiting_data_time"/>

    <ImageView
        android:id="@+id/hourWeatherIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/temp"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:background="@drawable/temperature_box_bg"
        android:text="@string/waiting_data_temp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/rainPossibility"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:text="@string/waiting_data_rain_possibility"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
        android:textColor="@color/weather_rain_possibility"
        android:gravity="center"
        android:layout_marginTop="4dp"/>

</LinearLayout>