<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/NoActionBarAppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/NoActionBarAppTheme.PopupOverlay"/>
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/textView_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aqi_detail_specify"
            />

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:numColumns="4"/>

        <TextView
            android:id="@+id/textView_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/aqi_detail_trend"/>

        <View
            android:id="@+id/dummy_view"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="#ffffff"/>

        <TextView
            android:id="@+id/textView_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/aqi_detail_sites"/>

        <FrameLayout
            android:id="@+id/map_fragment"
            android:layout_width="match_parent"
            android:layout_height="480dp"/>

    </LinearLayout>
</ScrollView>