<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/NoActionBarAppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/NoActionBarAppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/weather_detail_text_left_margin"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/temperature"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/weather_detail_text_left_margin"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:singleLine="false"
                        android:text="@string/wind"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/weather_detail_text_left_margin"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/pressure"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/weather_detail_text_left_margin"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/humidity"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/temperature_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/weather_detail_text_right_margin"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/waiting_data_temp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                    <TextView
                        android:id="@+id/wind_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/weather_detail_text_right_margin"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/waiting_data_wind"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                    <TextView
                        android:id="@+id/pressure_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/weather_detail_text_right_margin"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/waiting_data_pressure"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                    <TextView
                        android:id="@+id/humidity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/weather_detail_text_right_margin"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/waiting_data_rain_possibility"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:id="@+id/today"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/today"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                            android:textColor="@color/weather_text"
                            android:textSize="@dimen/weather_detail_text_size_large"/>
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tomorrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/tomorrow"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                            android:textColor="@color/weather_text"
                            android:textSize="@dimen/weather_detail_text_size_large"/>
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/today_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/waiting_data"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                    <TextView
                        android:id="@+id/today_weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/waiting_data_temp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                    <TextView
                        android:id="@+id/tomorrow_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/waiting_data"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                    <TextView
                        android:id="@+id/tomorrow_weather_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/weather_detail_text_top_margin"
                        android:text="@string/waiting_data_temp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:textColor="@color/weather_text"
                        android:textSize="@dimen/weather_detail_text_size"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:gravity="center|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/week_forecast"
                android:textAppearance="@style/TextAppearance.LargeSize.Inverse"
                android:textColor="@color/weather_small_title"
                />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:background="@color/list_line"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <GridView
                android:id="@+id/grid_everyDayWeather"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:numColumns="6"
                android:scrollbars="none"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:gravity="center|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/short_forecast"
                android:textAppearance="@style/TextAppearance.LargeSize.Inverse"
                android:textColor="@color/weather_small_title"
                />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:background="@color/list_line"
            />

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp">

                <GridView
                    android:id="@+id/grid_everyHourWeather"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:horizontalSpacing="3dp"
                    android:numColumns="12"
                    android:scrollbars="horizontal"
                    android:stretchMode="spacingWidthUniform"
                    />
            </LinearLayout>
        </HorizontalScrollView>


    </LinearLayout>


</LinearLayout>